--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+@media print {
+  body {
+    margin: 0;
+    padding: 0 !important;
+    min-width: 1400px !important;
+  }
+}
